# lms-ddd

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 45c2e9016b55_create_courses_and_enrollments_tables.py  b257f9614afc_add_lessons_and_lesson_progress_tables.py
src/lms/application/: complete_lesson.py  dto.py  enroll_in_course.py
src/lms/domain/: course.py  enrollment.py  events.py  exceptions.py  lesson.py  lesson_progress.py  repositories.py
src/lms/infrastructure/: container.py
src/lms/infrastructure/database/: model.py  models.py  session.py
src/lms/infrastructure/repositories/: course_repository.py  enrollment_repository.py  lesson_progress_repository.py  lesson_repository.py
src/lms/interfaces/: enrollment_router.py  main.py  progress_router.py  schemas.py
tests/unit/: test_enroll_in_course.py
